src/grammar.ebnf
expression = declaration ;
declaration = IDENTIFIER ":" { "_" | IDENTIFIER } | lambda ;
lambda = { IDENTIFIER } "$" expression | definition ;
definition = IDENTIFIER { primary } "=" expression | if ;
if = "if" expression "then" expression { "elif" expression expression } "else" expression | binary ;
binary = unary { ( IDENTIFIER | OPERATOR ) unary } ;
unary = ( "!" | "-" ) unary | call;
call = IDENTIFIER { primary } ;
primary = "true" | "false" | "null" | "(" expression ")" | NUMBER | STRING | IDENTIFIER ;
